# graphicsfuzz

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS  README.md  envbuild.py.template  pom.xml  presubmit.sh
.github/workflows/: gfauto.sh  gfauto.yml  graphicsfuzz.sh  graphicsfuzz.yml
android-client-dep/: pom.xml
assembly/: pom.xml
assembly-binaries/: pom.xml
assembly-public/: pom.xml
assembly-public/src/main/resources/: HASH
assembly/src/main/scripts/: .dockerignore  docker_build_create_start.sh.template
ast/: pom.xml
ast/src/test/resources/: log4j2.xml
binder/: README.md  postBuild  requirements.txt
checkstyle-config/: pom.xml
client-tests/: pom.xml
client-tests/src/test/glsl/: 42es.comp  42es.json  bad_fragment.frag  bad_vertex.frag  cube.frag  (+26 more)
common/: pom.xml
common-util/: pom.xml
compare-asts/: pom.xml
cpp/vulkan_layers/: CMakeLists.txt  README.md
cpp/vulkan_layers/shader_fuzzer/: layer.cpp  layer_impl.cpp
cpp/vulkan_layers/shader_scraper/: CMakeLists.txt  layer.cpp  layer_impl.cpp
docs/: android-networking-guide.md  android-notes.md  android_networking_guide.md  build_from_command_line.md  development.md  explore.md  finding-a-vulkan-driver-bug-using-spirv-fuzz.md  getting_started.md  glsl-fuzz-build.md  glsl-fuzz-develop.md  glsl-fuzz-explore.md  glsl-fuzz-generate.md  glsl-fuzz-intro.md  glsl-fuzz-reduce.md  glsl-fuzz-releases.md  glsl-fuzz-run.md  glsl-fuzz-walkthrough.md  glsl-reduce-intro.md  glsl-reduce-walkthrough.md  glsl-reduce.md  introduction.md  legacy-vulkan-worker.md  libFuzzer-integration.md  piglit-worker.md  reduce.md  run.md  spirv-fuzz-standalone-walkthrough.md
docs/summer-of-code-ideas/: 2019-JiradetOunjai.md  2019-vis.md  2019.md  2020.md  2021.md
docs/summer-of-code-ideas/summer-of-code-reports/: gsoc-2019-abelbriggs.md  gsoc-2020-Vasyl-Teliman.md  gsoc-2020-andreperezmaselco.md  gsoc-2020-nipungarg.md  gsoc-2021-mostafa-ashraf.md
experiments/: api_coverage.py  build-Imagination_Vulkan.sh  build-Khronos_Samples_Vulkan.sh  build-SaschaWillems_Vulkan.sh  build-google-test.md  build-google_vulkan_test_applications.sh  build-imagination.md  build-khr.md  build-project.sh  build-sascha.md  build-swiftshader-coverage.sh  build-swiftshader.md  demoChecker.sh  findUncoveredAPI.py  find_uncovered_api.py
fuzzerserver/: pom.xml
generate-and-run-shaders/: pom.xml
generator/: comp.spv  frag.spv  pom.xml  vert.spv
gfauto/: .editorconfig  .flake8  .gitattributes  .gitignore  .isort.cfg  Pipfile  README.md  azure-pipelines.yml  check_all.sh  dev_shell.sh.template  dictionary.dic  fix_all.sh  mypy.ini  pylintrc  pyproject.toml  run_protoc.sh  setup.cfg  setup.py  whitelist.dic
gfauto/docs/: conventions.md  coverage.md
gfauto/gfauto/: add_amber_tests_to_cts.py  amber_converter.py  android_device.py  artifact.proto  artifact_pb2.py  artifact_pb2.pyi  artifact_util.py  artifacts.py  binaries_util.py  bucket_via_transformations.py  built_in_binaries.py  common.proto  common_pb2.py  common_pb2.pyi  cov.py  cov_from_gcov.py  cov_merge.py  cov_new.py  cov_to_lines.py  cov_to_source.py  cov_util.py  cov_venn.py  device.proto  device_pb2.py  device_pb2.pyi  devices_util.py  download_cts_gf_tests.py  fuzz.py  fuzz_glsl_amber_test.py  fuzz_glsl_shadertrap_test.py  fuzz_glsl_test.py  fuzz_spirv_amber_test.py  fuzz_spirv_test.py  fuzz_test_util.py  gcov_to_cov.py  generate_amber.py  generate_cts_test_template.py  gerrit_util.py  gfauto_interestingness_test.py  gflogging.py  (+47 more)
gfauto/gfautotests/: __init__.py  test_cov_merge.py  test_fuzz.py  test_gerrit_util.py  test_large.py  test_signature_util.py
gfauto/temp/: .gitignore
gles-worker/: build.gradle  gradlew  gradlew.bat
gles-worker-dependencies/: pom.xml
gles-worker/android/: AndroidManifest.xml  build.gradle
gles-worker/core/: build.gradle
gles-worker/desktop/: build.gradle
gles-worker/gradle/wrapper/: gradle-wrapper.properties
gles-worker/ios/: build.gradle  robovm.properties  robovm.xml
graphicsfuzz/: pom.xml
hug-gsoc/: README.md  build-google_vulkan_test_applications.sh  build-swiftshader-coverage.sh  run-google_vulkan_test_applications.sh
parent-all/: pom.xml
parent-checkstyle/: pom.xml
python/: .gitignore  pom.xml
reducer/: pom.xml  shader.exception
run-configurations/: Build.xml  Build__run_tests_.xml  Build__run_tests___image_tests_.xml  Clean.xml  Remote_debug_localhost.xml  TestGenerate.xml  TestReduce.xml
server/: pom.xml
server-public/: pom.xml
server-static-public/: pom.xml
server-thrift-gen/: pom.xml
shaders/: pom.xml
shadersets-util/: pom.xml
temp/: .gitignore
test-util/: pom.xml
tester/: pom.xml
thrift/: .gitignore  pom.xml
tool/: pom.xml
util/: pom.xml
vulkan-worker/: .gitignore  CMakeLists.txt  README.md  build.gradle  gradlew  gradlew.bat  settings.gradle
vulkan-worker/samples/: regen.sh  shader.frag  shader.frag.spv  shader.json  shader.vert  shader.vert.spv
vulkan-worker/src/android/: CMakeLists.txt  build.gradle
vulkan-worker/src/android/src/main/: AndroidManifest.xml
vulkan-worker/src/android/src/main/cpp/: main.cc  platform.cc  platform.h
vulkan-worker/src/android/src/main/res/values/: strings.xml
vulkan-worker/src/common/: vkcheck.cc  vkcheck.h  vulkan_worker.cc  vulkan_worker.h
vulkan-worker/src/common/coherence/: coherence.frag.spv  coherence.sh  coherence.vert  coherence_frag.inc  coherence_vert.inc
vulkan-worker/src/common/sanity/: sanity.frag  sanity.sh  sanity.vert.spv  sanity_frag.inc  sanity_vert.inc
vulkan-worker/src/linux/: main.cc  platform.cc  platform.h
vulkan-worker/test/: README.md  default.frag  default.frag.spv  default.vert  default.vert.spv  prepare-spv.sh  run-tests.sh  test_0000.frag  test_0000.frag.spv  test_0001.frag  test_0001.frag.spv  test_0001.json  test_0002.frag  test_0002.frag.spv  test_0003.frag  test_0003.frag.spv  test_0004.frag  test_0004.frag.spv  test_0005.frag  test_0005.frag.spv  test_0005.json  test_0006.frag  test_0006.frag.spv  test_0006.json
zip-helper/: pom.xml
(+1281 files in other folders)
