# Copyright 2019 The GraphicsFuzz Project Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ['wheel', 'setuptools']
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']

# Black currently matches against full paths, so we only match one level deep
# to ensure only files in gfauto (and not in the current directory) are
# matched.
# https://github.com/python/black/issues/712

include = '.*[.]py$'
exclude = '__pycache__|_pb2[.]py'
