# Copyright 2019 The GraphicsFuzz Project Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
description-file = README.md

# This affects pep8.py, which in turn affects PyCharm/IntelliJ PEP8 warnings.
[pep8]
ignore = E203,W503,E501

# pycodestyle is the new name and version of pep8.py. I'm not sure if these are
# actually used by flake8 or PyCharm/IntelliJ, but they should be kept in sync
# with [pep8] above and the config in .flake8.
[pycodestyle]
ignore = E203,W503,E501
